src/drolta/parsing/DroltaParser.py
# Generated from DroltaParser.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class DroltaParser(Parser):

    grammarFileName = "DroltaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "';'",
        "'.'",
        "'('",
        "')'",
        "'['",
        "']'",
        "'::'",
        "','",
        "'FIND'",
        "'WHERE'",
        "'OR'",
        "'AND'",
        "'NOT'",
        "'LIMIT'",
        "'BY'",
        "'IN'",
        "'ORDER'",
        "'GROUP'",
        "'USING'",
        "'DEFINE'",
        "'ALIAS'",
        "'AS'",
        "'='",
        "'!='",
        "'<='",
        "'<'",
        "'>='",
        "'>'",
        "'ASC'",
        "'DESC'",
        "'OFFSET'",
        "'FIRST'",
        "'LAST'",
        "'NULLS'",
        "'NULL'",
        "'TRUE'",
        "'FALSE'",
        "'?'",
    ]

    symbolicNames = [
        "<INVALID>",
        "S_COL",
        "DOT",
        "OPEN_PAR",
        "CLOSE_PAR",
        "BRACKET_L",
        "BRACKET_R",
        "DBL_COL",
        "COMMA",
        "FIND",
        "WHERE",
        "OR",
        "AND",
        "NOT",
        "LIMIT",
        "BY",
        "IN",
        "ORDER",
        "GROUP",
        "USING",
        "DEFINE",
        "ALIAS",
        "AS",
        "EQ",
        "NEQ",
        "LTE",
        "LT",
        "GTE",
        "GT",
        "ASC",
        "DESC",
        "OFFSET",
        "FIRST",
        "LAST",
        "NULLS",
        "NULL",
        "TRUE",
        "FALSE",
        "VAR_PREFIX",
        "IDENTIFIER",
        "INT_LITERAL",
        "FLOAT_LITERAL",
        "STRING_LITERAL",
        "SINGLE_LINE_COMMENT",
        "MULTILINE_COMMENT",
        "WHITESPACE",
    ]

    RULE_prog = 0
    RULE_drolta_stmt_list = 1
    RULE_drolta_stmt = 2
    RULE_declare_alias_stmt = 3
    RULE_declare_rule_stmt = 4
    RULE_define_clause = 5
    RULE_result_var_list = 6
    RULE_query_stmt = 7
    RULE_find_clause = 8
    RULE_result_var = 9
    RULE_variable_alias = 10
    RULE_where_clause = 11
    RULE_order_by_clause = 12
    RULE_ordering_term_list = 13
    RULE_ordering_term = 14
    RULE_group_by_clause = 15
    RULE_variable_list = 16
    RULE_limit_clause = 17
    RULE_where_stmt = 18
    RULE_filter_stmt = 19
    RULE_atom_list = 20
    RULE_comparison_operator = 21
    RULE_predicate_neg_stmt = 22
    RULE_predicate_stmt = 23
    RULE_positional_param_list = 24
    RULE_named_param_list = 25
    RULE_named_param = 26
    RULE_atom = 27
    RULE_variable = 28

    ruleNames = [
        "prog",
        "drolta_stmt_list",
        "drolta_stmt",
        "declare_alias_stmt",
        "declare_rule_stmt",
        "define_clause",
        "result_var_list",
        "query_stmt",
        "find_clause",
        "result_var",
        "variable_alias",
        "where_clause",
        "order_by_clause",
        "ordering_term_list",
        "ordering_term",
        "group_by_clause",
        "variable_list",
        "limit_clause",
        "where_stmt",
        "filter_stmt",
        "atom_list",
        "comparison_operator",
        "predicate_neg_stmt",
        "predicate_stmt",
        "positional_param_list",
        "named_param_list",
        "named_param",
        "atom",
        "variable",
    ]

    EOF = Token.EOF
    S_COL = 1
    DOT = 2
    OPEN_PAR = 3
    CLOSE_PAR = 4
    BRACKET_L = 5
    BRACKET_R = 6
    DBL_COL = 7
    COMMA = 8
    FIND = 9
    WHERE = 10
    OR = 11
    AND = 12
    NOT = 13
    LIMIT = 14
    BY = 15
    IN = 16
    ORDER = 17
    GROUP = 18
    USING = 19
    DEFINE = 20
    ALIAS = 21
    AS = 22
    EQ = 23
    NEQ = 24
    LTE = 25
    LT = 26
    GTE = 27
    GT = 28
    ASC = 29
    DESC = 30
    OFFSET = 31
    FIRST = 32
    LAST = 33
    NULLS = 34
    NULL = 35
    TRUE = 36
    FALSE = 37
    VAR_PREFIX = 38
    IDENTIFIER = 39
    INT_LITERAL = 40
    FLOAT_LITERAL = 41
    STRING_LITERAL = 42
    SINGLE_LINE_COMMENT = 43
    MULTILINE_COMMENT = 44
    WHITESPACE = 45

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def drolta_stmt_list(self):
            return self.getTypedRuleContext(DroltaParser.Drolta_stmt_listContext, 0)

        def EOF(self):
            return self.getToken(DroltaParser.EOF, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_prog

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProg"):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)

    def prog(self):

        localctx = DroltaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.drolta_stmt_list()
            self.state = 59
            self.match(DroltaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Drolta_stmt_listContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def drolta_stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Drolta_stmtContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Drolta_stmtContext, i)

        def S_COL(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.S_COL)
            else:
                return self.getToken(DroltaParser.S_COL, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_drolta_stmt_list

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDrolta_stmt_list"):
                return visitor.visitDrolta_stmt_list(self)
            else:
                return visitor.visitChildren(self)

    def drolta_stmt_list(self):

        localctx = DroltaParser.Drolta_stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_drolta_stmt_list)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.drolta_stmt()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 1:
                self.state = 62
                self.match(DroltaParser.S_COL)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 3146240) != 0:
                    self.state = 63
                    self.drolta_stmt()

                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Drolta_stmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare_alias_stmt(self):
            return self.getTypedRuleContext(DroltaParser.Declare_alias_stmtContext, 0)

        def declare_rule_stmt(self):
            return self.getTypedRuleContext(DroltaParser.Declare_rule_stmtContext, 0)

        def query_stmt(self):
            return self.getTypedRuleContext(DroltaParser.Query_stmtContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_drolta_stmt

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDrolta_stmt"):
                return visitor.visitDrolta_stmt(self)
            else:
                return visitor.visitChildren(self)

    def drolta_stmt(self):

        localctx = DroltaParser.Drolta_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_drolta_stmt)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.declare_alias_stmt()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.declare_rule_stmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.query_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Declare_alias_stmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.original = None  # Token
            self.alias = None  # Token

        def ALIAS(self):
            return self.getToken(DroltaParser.ALIAS, 0)

        def AS(self):
            return self.getToken(DroltaParser.AS, 0)

        def IDENTIFIER(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.IDENTIFIER)
            else:
                return self.getToken(DroltaParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_declare_alias_stmt

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDeclare_alias_stmt"):
                return visitor.visitDeclare_alias_stmt(self)
            else:
                return visitor.visitChildren(self)

    def declare_alias_stmt(self):

        localctx = DroltaParser.Declare_alias_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declare_alias_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(DroltaParser.ALIAS)
            self.state = 77
            localctx.original = self.match(DroltaParser.IDENTIFIER)
            self.state = 78
            self.match(DroltaParser.AS)
            self.state = 79
            localctx.alias = self.match(DroltaParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Declare_rule_stmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def define_clause(self):
            return self.getTypedRuleContext(DroltaParser.Define_clauseContext, 0)

        def where_clause(self):
            return self.getTypedRuleContext(DroltaParser.Where_clauseContext, 0)

        def group_by_clause(self):
            return self.getTypedRuleContext(DroltaParser.Group_by_clauseContext, 0)

        def order_by_clause(self):
            return self.getTypedRuleContext(DroltaParser.Order_by_clauseContext, 0)

        def limit_clause(self):
            return self.getTypedRuleContext(DroltaParser.Limit_clauseContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_declare_rule_stmt

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDeclare_rule_stmt"):
                return visitor.visitDeclare_rule_stmt(self)
            else:
                return visitor.visitChildren(self)

    def declare_rule_stmt(self):

        localctx = DroltaParser.Declare_rule_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declare_rule_stmt)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.define_clause()
            self.state = 82
            self.where_clause()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 18:
                self.state = 83
                self.group_by_clause()

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 17:
                self.state = 86
                self.order_by_clause()

            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 14:
                self.state = 89
                self.limit_clause()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ruleName = None  # Token

        def DEFINE(self):
            return self.getToken(DroltaParser.DEFINE, 0)

        def OPEN_PAR(self):
            return self.getToken(DroltaParser.OPEN_PAR, 0)

        def CLOSE_PAR(self):
            return self.getToken(DroltaParser.CLOSE_PAR, 0)

        def IDENTIFIER(self):
            return self.getToken(DroltaParser.IDENTIFIER, 0)

        def result_var_list(self):
            return self.getTypedRuleContext(DroltaParser.Result_var_listContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_define_clause

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDefine_clause"):
                return visitor.visitDefine_clause(self)
            else:
                return visitor.visitChildren(self)

    def define_clause(self):

        localctx = DroltaParser.Define_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_define_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(DroltaParser.DEFINE)
            self.state = 93
            localctx.ruleName = self.match(DroltaParser.IDENTIFIER)
            self.state = 94
            self.match(DroltaParser.OPEN_PAR)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 38 or _la == 39:
                self.state = 95
                self.result_var_list()

            self.state = 98
            self.match(DroltaParser.CLOSE_PAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Result_var_listContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def result_var(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Result_varContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Result_varContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.COMMA)
            else:
                return self.getToken(DroltaParser.COMMA, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_result_var_list

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitResult_var_list"):
                return visitor.visitResult_var_list(self)
            else:
                return visitor.visitChildren(self)

    def result_var_list(self):

        localctx = DroltaParser.Result_var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_result_var_list)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.result_var()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 8:
                self.state = 101
                self.match(DroltaParser.COMMA)
                self.state = 102
                self.result_var()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Query_stmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def find_clause(self):
            return self.getTypedRuleContext(DroltaParser.Find_clauseContext, 0)

        def where_clause(self):
            return self.getTypedRuleContext(DroltaParser.Where_clauseContext, 0)

        def group_by_clause(self):
            return self.getTypedRuleContext(DroltaParser.Group_by_clauseContext, 0)

        def order_by_clause(self):
            return self.getTypedRuleContext(DroltaParser.Order_by_clauseContext, 0)

        def limit_clause(self):
            return self.getTypedRuleContext(DroltaParser.Limit_clauseContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_query_stmt

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitQuery_stmt"):
                return visitor.visitQuery_stmt(self)
            else:
                return visitor.visitChildren(self)

    def query_stmt(self):

        localctx = DroltaParser.Query_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_query_stmt)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.find_clause()
            self.state = 109
            self.where_clause()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 18:
                self.state = 110
                self.group_by_clause()

            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 17:
                self.state = 113
                self.order_by_clause()

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 14:
                self.state = 116
                self.limit_clause()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Find_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIND(self):
            return self.getToken(DroltaParser.FIND, 0)

        def result_var_list(self):
            return self.getTypedRuleContext(DroltaParser.Result_var_listContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_find_clause

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFind_clause"):
                return visitor.visitFind_clause(self)
            else:
                return visitor.visitChildren(self)

    def find_clause(self):

        localctx = DroltaParser.Find_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_find_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(DroltaParser.FIND)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 38 or _la == 39:
                self.state = 120
                self.result_var_list()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Result_varContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.aggregateName = None  # Token

        def OPEN_PAR(self):
            return self.getToken(DroltaParser.OPEN_PAR, 0)

        def variable(self):
            return self.getTypedRuleContext(DroltaParser.VariableContext, 0)

        def CLOSE_PAR(self):
            return self.getToken(DroltaParser.CLOSE_PAR, 0)

        def IDENTIFIER(self):
            return self.getToken(DroltaParser.IDENTIFIER, 0)

        def variable_alias(self):
            return self.getTypedRuleContext(DroltaParser.Variable_aliasContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_result_var

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitResult_var"):
                return visitor.visitResult_var(self)
            else:
                return visitor.visitChildren(self)

    def result_var(self):

        localctx = DroltaParser.Result_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_result_var)
        self._la = 0  # Token type
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                localctx.aggregateName = self.match(DroltaParser.IDENTIFIER)
                self.state = 124
                self.match(DroltaParser.OPEN_PAR)
                self.state = 125
                self.variable()
                self.state = 126
                self.match(DroltaParser.CLOSE_PAR)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 22:
                    self.state = 127
                    self.variable_alias()

                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.variable()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 22:
                    self.state = 131
                    self.variable_alias()

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Variable_aliasContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.alias = None  # Token

        def AS(self):
            return self.getToken(DroltaParser.AS, 0)

        def IDENTIFIER(self):
            return self.getToken(DroltaParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_variable_alias

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVariable_alias"):
                return visitor.visitVariable_alias(self)
            else:
                return visitor.visitChildren(self)

    def variable_alias(self):

        localctx = DroltaParser.Variable_aliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variable_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(DroltaParser.AS)
            self.state = 137
            localctx.alias = self.match(DroltaParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Where_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(DroltaParser.WHERE, 0)

        def where_stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Where_stmtContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Where_stmtContext, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_where_clause

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitWhere_clause"):
                return visitor.visitWhere_clause(self)
            else:
                return visitor.visitChildren(self)

    def where_clause(self):

        localctx = DroltaParser.Where_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_where_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(DroltaParser.WHERE)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 140
                self.where_stmt()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 549755822088) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Order_by_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDER(self):
            return self.getToken(DroltaParser.ORDER, 0)

        def BY(self):
            return self.getToken(DroltaParser.BY, 0)

        def ordering_term_list(self):
            return self.getTypedRuleContext(DroltaParser.Ordering_term_listContext, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_order_by_clause

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrder_by_clause"):
                return visitor.visitOrder_by_clause(self)
            else:
                return visitor.visitChildren(self)

    def order_by_clause(self):

        localctx = DroltaParser.Order_by_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_order_by_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(DroltaParser.ORDER)
            self.state = 146
            self.match(DroltaParser.BY)
            self.state = 147
            self.ordering_term_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ordering_term_listContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ordering_term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DroltaParser.Ordering_termContext)
            else:
                return self.getTypedRuleContext(DroltaParser.Ordering_termContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(DroltaParser.COMMA)
            else:
                return self.getToken(DroltaParser.COMMA, i)

        def getRuleIndex(self):
            return DroltaParser.RULE_ordering_term_list

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrdering_term_list"):
                return visitor.visitOrdering_term_list(self)
            else:
                return visitor.visitChildren(self)

    def ordering_term_list(self):

        localctx = DroltaParser.Ordering_term_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ordering_term_list)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.ordering_term()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 8:
                self.state = 150
                self.match(DroltaParser.COMMA)
                self.state = 151
                self.ordering_term()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ordering_termContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(DroltaParser.VariableContext, 0)

        def NULLS(self):
            return self.getToken(DroltaParser.NULLS, 0)

        def ASC(self):
            return self.getToken(DroltaParser.ASC, 0)

        def DESC(self):
            return self.getToken(DroltaParser.DESC, 0)

        def FIRST(self):
            return self.getToken(DroltaParser.FIRST, 0)

        def LAST(self):
            return self.getToken(DroltaParser.LAST, 0)

        def getRuleIndex(self):
            return DroltaParser.RULE_ordering_term

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrdering_term"):
                return visitor.visitOrdering_term(self)
            else:
                return visitor.visitChildren(self)

    def ordering_term(self):

        localctx = DroltaParser.Ordering_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_ordering_term)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.variable()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 29 or _la == 30:
                self.state = 158
                _la = self._input.LA(1)
                if not (_la == 29 or _la == 30):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()

            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 34:
                self.state = 161
                self.match(DroltaParser.NULLS)
                self.state = 162
                _la = self._input.LA(1)
                if not (_la == 32 or _la == 33):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Group_by_clauseContext(ParserRuleContext):
        __slots__ = "parser"
